Solved issue of overlapping line on Button

--- a/ui/src/app/entity/attribute/attribute-table.scss
+++ b/ui/src/app/entity/attribute/attribute-table.scss
@@ -69,7 +69,7 @@ md-toolbar.md-table-toolbar.alternate {
 
 .max-text
 {
-	max-height: 350px;
+	max-height: 290px;
     width:162% !important
 }
 
